# savant

./: CMakeLists.txt  requirements.txt
include/: assoc.hpp  bed_file.hpp  burden.hpp  debug_log.hpp  fit.hpp  getopt_wrapper.hpp  grm.hpp  group.hpp  inv_norm.hpp  linear_model.hpp  logistic_score_model.hpp  mixed_effects_model.hpp  pca.hpp  plot.hpp  qtl.hpp  single.hpp  utility.hpp  whole_genome_model.hpp
src/: assoc.cpp  bed_file.cpp  burden.cpp  fit.cpp  grm.cpp  group.cpp  inv_norm.cpp  main.cpp  pca.cpp  plot.cpp  qtl.cpp  single.cpp
